--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id = "container">
 
     <div id = "header">
-        <h1>Know your politicians</h1>
+        <h1>Know your local politicians</h1>
     </div>
 
     <div id = "nav">
